--- a/modules/bootstrap5-base-theme/layouts/_default/baseof.html
+++ b/modules/bootstrap5-base-theme/layouts/_default/baseof.html
@@ -86,5 +86,5 @@
 {{- end -}}
 
 {{- define "scripts" -}}
-    {{ partial "scripts/bootstrap-js" . -}}
+    {{/* partial "scripts/bootstrap-js" . -*/}}
 {{- end -}}
