--- a/modules/bootstrap5-base-theme/layouts/partials/menus/social-links.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/menus/social-links.html
@@ -1,3 +1,4 @@
+{{/* TODO: Social links: icons and text */}}
 {{- range .Site.Menus.social -}}
 <li><a href="{{ .URL }}" title="{{ .Name }}"><i class="icon ion-logo-{{ .Identifier }}"></i></a></li>
 {{- end -}}
