--- a/modules/bootstrap5-base-theme/layouts/_default/baseof.html
+++ b/modules/bootstrap5-base-theme/layouts/_default/baseof.html
@@ -7,7 +7,9 @@
         {{/* На странице можно использовать переменные: https://gohugo.io/variables/page/ */}}
         {{- template "charset" . }}
         {{- template "title" . }}
+        {{ if hugo.IsProduction -}}
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        {{- end -}}
         {{- template "viewport" . }}
         <!--
             TODO: По сути авторов у страницы может быть несколько
