--- a/modules/bootstrap5-base-theme/layouts/partials/menus/mainmenu/default.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/menus/mainmenu/default.html
@@ -1,32 +1,23 @@
 {{/* {{ partial "menus/mainmenu/default" . }} */}}
-<div class="container-fluid bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-            {{/* TODO: Локализовать */}}
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MainMenuDefault"
-                aria-controls="MainMenuDefault" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<nav class="navbar navbar-expand-xl navbar-dark bg-dark" aria-label="Sixth navbar example">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        TODO
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="MainMenuDefault">
-                <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-                    
-                    {{- partial "menus/mainmenu/dropdown-minimal" . -}}
-
-                </ul>
-                {{- if $.Site.Language.LanguageName -}}
-                <ul class="nav justify-content-end">
-
-                    {{- partial "menus/translations/dropdown" . -}}
-
-                </ul>
-                {{- end -}}
-                <form class="d-flex">
-                    {{/* TODO: Локализовать */}}
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>
-            </div>
-        </div>
-    </nav>
-</div>
+      <div class="collapse navbar-collapse" id="navbarsExample06">
+        <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+            {{- partial "menus/mainmenu/dropdown-minimal" . -}}
+            {{- if $.Site.Language.LanguageName -}}
+                {{- partial "menus/translations/dropdown" . -}}
+            {{- end -}}
+        </ul>
+        <form role="search">
+          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+    </div>
+</nav>
