--- a/modules/bootstrap5-base-theme/layouts/partials/menus/mainmenu/dropdown-minimal.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/menus/mainmenu/dropdown-minimal.html
@@ -3,8 +3,8 @@
 {{- range .Site.Menus.main -}}
 
         {{- if ne .Identifier "home" -}}
-            <li class="nav-item {{if  eq $currentPage.Section .Identifier }}active{{end}}">
-                <a href="{{ .URL | relLangURL }}" class="nav-link" aria-current="page">
+            <li class="nav-item">
+                <a href="{{ .URL | relLangURL }}" class="nav-link {{if  eq $currentPage.Section .Identifier }}active{{end}}" aria-current="page">
                 {{- .Name -}}
                 </a>
             </li>
