--- a/modules/bootstrap5-base-theme/layouts/partials/menus/social-links-2.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/menus/social-links-2.html
@@ -1,4 +1,4 @@
-{{/* Social links: icons and text */}}
+{{/* TODO: Social links: icons and text */}}
 {{- range .Site.Menus.social -}}
 <li><a href="{{ .URL }}" title="{{ .Name }}"><i class="icon ion-logo-{{ .Identifier }}"></i>{{ .Name }}</a></li>
 {{- end -}}
