--- a/modules/bootstrap5-base-theme/layouts/partials/menus/translations/dropdown.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/menus/translations/dropdown.html
@@ -1,13 +1,13 @@
 {{/* {{ partial "menus/translations/dropdown" . }} */}}
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="TranslationsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
         {{- $.Site.Language.LanguageName -}}
     </a>
-    <div class="dropdown-menu" aria-labelledby="TranslationsDropdown">
+    <ul class="dropdown-menu">
         {{- range $.Site.Home.AllTranslations -}}
-            <a class="dropdown-item" href="{{ .Permalink }}">
+            <li><a class="dropdown-item" href="{{ .Permalink }}">
                 {{- .Language.LanguageName -}}
-            </a>
+            </a></li>
         {{- end -}}
-    </div>
+    </ul>
 </li>
