--- a/modules/bootstrap5-base-theme/layouts/partials/head/styles/bootstrap-css.html
+++ b/modules/bootstrap5-base-theme/layouts/partials/head/styles/bootstrap-css.html
@@ -1,6 +1,6 @@
 {{/* partial "head/styles/bootstrap-css" . */}}
 {{ if eq hugo.Environment "production" -}}
-<link rel="stylesheet" href="/dist/bootstrap/css/bootstrap.min.css">
+<link href="/dist/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 {{- else -}}
-<link rel="stylesheet" href="/dist/bootstrap/css/bootstrap.css">
+<link href="/dist/bootstrap/css/bootstrap.css" rel="stylesheet">
 {{- end }}
