--- a/modules/bootstrap5-base-theme/layouts/_default/redirect.html
+++ b/modules/bootstrap5-base-theme/layouts/_default/redirect.html
@@ -2,9 +2,9 @@
 <html lang="{{ .Site.Language.Lang }}">
 <head>
 <meta charset="utf-8">
-<title>{{ .Page.Params.redirect | absURL }}</title>
-<link rel="canonical" href="{{ .Page.Params.redirect | absURL }}">
+<title>{{ .Page.Params.redirect | relLangURL }}</title>
+<link rel="canonical" href="{{ .Page.Params.redirect | relLangURL }}">
 <meta name="robots" content="noindex">
-<meta http-equiv="refresh" content="0; url={{ .Page.Params.redirect | absURL }}">
+<meta http-equiv="refresh" content="0; url={{ .Page.Params.redirect | relLangURL }}">
 </head>
 </html>
